--- a/src/GUI/fLoSanPham.form
+++ b/src/GUI/fLoSanPham.form
@@ -275,6 +275,9 @@
                       <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableThongTinLoMouseClicked"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jTableThongTinLo.setRowSelectionAllowed(true);&#xa;jTableThongTinLo.setAutoCreateRowSorter(true);"/>
                   </AuxValues>
